# test-semantic-release

./: .gitignore  CHANGELOG.md  pyproject.toml
src/test_semantic/: __init__.py  aaa.py
