[project]
name = "test-semantic"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-semantic-release>=9.21.0",
]

[project.scripts]
test-semantic = "test_semantic:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "test_semantic.__version__" }

[tool.semantic_release]
tag_format = "v{version}"
version_variables = [
    "src/test_semantic/__init__.py:__version__",
]
version_source = "tag"
upload_to_PyPI = false
version_pattern = [
    "README.md:rev: v{version}",
    "docs/CONTRIBUTING.md:tryceratops, version {version}"
]

[semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = true